src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_return_statements_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "STATEMENT": {
        "statement": {
          "RETURN": {
            "return_token": {
              "token_type": "RETURN",
              "literal": "RETURN"
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
